--- a/pages/catalogo.html
+++ b/pages/catalogo.html
@@ -69,7 +69,7 @@
   <header>
 
     <!-- foto cabecera de catalogo -->
-      <img src="../img/catalogo.jpg" alt="foto recibiendo una llave" class="banner">
+      <img src="../img/catalogo.jpg" alt="foto de una mujer dandole llave de auto un hombre" class="banner">
 
       <h1>Nuestro Catalogo</h1>
   </header>
