--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -70,7 +70,7 @@
 
         
     <!-- foto cabecera de contacto -->
-    <img src="../img/contacto.jpg" alt="mujer con computadora " class="banner">
+    <img src="../img/contacto.jpg" alt="foto de gasolinera vintage" class="banner">
 
     <h1>Te estabamos esperando</h1>
 
