--- a/pages/faq.html
+++ b/pages/faq.html
@@ -63,7 +63,7 @@
       <header>
 
         <!-- foto cabecera de faq -->
-    <img src="../img/faq.jpg" alt="mujer con computadora " class="banner">
+    <img src="../img/faq.jpg" alt="foto de senalizacion con una flecha para cada lado" class="banner">
 
 
         <h1>Preguntas frecuentes</h1>
