--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -68,7 +68,7 @@
     <header>
 
         <!-- foto cabecera de nosotros -->
-      <img src="../img/nosotros.jpg" alt="foto de taller con dos vehiculos en restauración" width="100%">
+      <img src="../img/nosotros.jpg" alt="foto de taller con dos vehiculos en restauración" class="banner">
 
       <h1 class="nosotros_bienvenida">
         ¡Bienvenido a Concesionaria Time!</h1>
